{
    "name": "TouchControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "b3ea63f7-e3ba-4b1a-8175-663fd84dfb69",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "841d6fcd-23ed-4977-85d3-01e15fb9f130",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "2ca6542c-8706-4993-a6e3-3f79d0564227",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0513797-5baf-44d9-bf41-092b4a563e1c",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9aa4efe-f97d-40d5-a440-c48ebc8b29a6",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}